[package]
name = "geofinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.5"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5.2", features = ["trace", "set-header", "timeout", "limit", "cors"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
bson = { version = "2.10", features = ["chrono-0_4"] }
mongodb = { version = "2.8", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
chrono = "0.4.37"
futures = "0.3.25"
dotenv = "0.15.0"
serde_with = "3.7.0"
redis = "0.23.1"
string-patterns = "0.3.8"
simple-string-patterns = "0.3.12"
rand = "0.8.5"
julian_day_converter = "0.3.2"
